Routen Unterscheidung für Wertpapier Typ